html5 css with animation incl   animation-name: heartbeat;   animation-duration: .8s;   animation-timing-function: ease-out;   animation-delay: .5s;   animation-iteration-count: infinite;   animation-direction: reverse;   animation-fill-mode: backwards;

--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-<div id="left"></div>
-<div id="right"></div>
+<!DOCTYPE html>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Advanced CSS - Solution 12.2</title>
+	<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <div id="left"></div>
+  <div id="right"></div>
+</body>
+
+</html>
